update slides to check chicktech shared inbox

--- a/slides/index.html
+++ b/slides/index.html
@@ -1105,6 +1105,10 @@ This is a site about me.
 <button onclick="mailer.send(document.getElementById('message').value)">Send</button>
 <!-- Other stuff that was here -->
                             </code></pre>
+
+			    <p>Try sending a message and see if it shows up
+				in our <a href="https://www.mailinator.com/inbox2.jsp?public_to=chicktechwebdevdec2016#/#public_maildirdiv">shared mailbox</a>
+                            </p>
                         </div>
                     </section>
                     <section>
